--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,20 +22,27 @@
 
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
+          
             {% if current_user.is_authenticated %}
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                     Account <b class="caret"></b>
                 </a>
                 <ul class="dropdown-menu">
-                    <li><a href="{{ url_for('auth.logout') }}">Log Out</a></li>
+                    
+                    <li>
+                        <a href="{{ url_for('main.user', username=current_user.username) }}">
+                            Profile
+                        </a>
+                    </li>
+                    <li><a href="{{ url_for('main.check_messages', username=current_user.username)}}">Messages</a></li>
                 </ul>
             </li>
 
+            <li><a href="{{ url_for('auth.logout') }}">Log Out</a></li>
+
             <li>
-                <a href="{{ url_for('main.user', username=current_user.username) }}">
-                    Profile
-                </a>
+                <a href="{{ url_for('main.post_new_item') }}"><button type="button" class="btn btn-secondary">Post New Item</button></a>
             </li>
 
             {% else %}
@@ -51,7 +58,9 @@
 
 {% endblock %}
 
+
 {% block content %}
+<div class = "content-div">
 <div class="container">
     {% for msg in get_flashed_messages() %}
         <div class="alert alert-danger">
@@ -69,7 +78,7 @@
       <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Category
       <span class="caret"></span></button>
       <ul class="dropdown-menu">
-        <li><a href="#">Home & Living</a></li>
+        <li><a href="{{ url_for('main.home_living') }}">Home & Living</a></li>
         <li><a href="#">Kitchen</a></li>
         <li><a href="#">Baby</a></li>
         <li><a href="#">Books</a></li>
@@ -83,8 +92,9 @@
       </ul>
     </div>
 
-    <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+    <form class="d-flex" method="GET" action="search">
+
+        <input class="form-control me-2" name="query" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
 
@@ -94,4 +104,5 @@
 
 
 {% block page_content %}{% endblock  %}
+</div>
 {% endblock %}
