--- a/app/templates/main/home_living.html
+++ b/app/templates/main/home_living.html
@@ -5,7 +5,7 @@
 {% block page_content %}
 <div class = "item-div">
 
-  
+<h1>Category: {{ Category == 1 }}</h1>
 {% if items %}
 {% for item in items|sort(reverse=True, attribute='timestamp') %}
 
