--- a/app/templates/main/each-item.html
+++ b/app/templates/main/each-item.html
@@ -10,7 +10,7 @@
         <h3>{{ item.title }} </h3>
 
         <div class="card col-sm-12 each-item">
-            <img class="card-img-top" src="{{url_for('static', filename='images/trademe.jpeg')}}" alt="">
+            <img class="card-img-top item-image2" src="{{url_for('static', filename='images/cart.jpg')}}" alt="">
             <div class="card-body">
                 <h5 class="card-title">By {{ item.giver.username }}</h5>
                 <p class="card-text">{{ item.description }}</p>
