--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -3,39 +3,26 @@
 
 {% block title %}{{super()}}Index {% endblock %}
 
+
 {% block page_content %}
 <div class="index-div">
-<h3>Current posts # {{ posts|length }} </h3>
-
-{% if posts %}
-{% for post in posts|sort(reverse=True, attribute='timestamp') %}
-
-
-<div class="card-deck">
-    
-  <div class="card col-sm-3 each-item" >
-    <a href="{{ url_for('main.each_item', item_id=post.id)}}">
-        <img class="card-img-top" src="{{url_for('static', filename='images/trademe.jpeg')}}" alt="{{ post.title }}">
-        
+  <h3>Currently {{ posts|length }} items available! </h3>
+  {% if posts %}
+  {% for post in posts|sort(reverse=True, attribute='timestamp') %}
+  <div class="card-deck">
+    <div class="card col-lg-3 col-md-4 each-item">
+      <a href="{{ url_for('main.each_item', item_id=post.id)}}">
+        <img class="card-img-top item-image" src="{{url_for('static', filename='images/cart.jpg')}}" alt="{{ post.title }}">
         <div class="card-body">
-          <h5 class="card-title">{{ post.title }}</h5></a>
-          <p class="card-text">{{ post.description }}</p>
-          <p class="card-text"><small class="text-muted">{{ moment(post.timestamp).fromNow() }}</small></p>
-        </div>
-      </div>
-     
-      </div>
+          <h5 class="card-title">{{ post.title }}</h5>
+      </a>
+      <p class="card-text"><small class="text-muted">{{ moment(post.timestamp).fromNow() }}</small></p>
     </div>
+  </div>
+  {% else %}
+  <p>There is no post.</p>
+  {% endfor %}
+  {% endif %}
+</div>
 
-{% endfor %}
-{% else %}
-<p>There is no post.</p>
-{% endif %}
 {% endblock %}
-
-
-
-
-
-
-   
