--- a/app/templates/main/contact-giver.html
+++ b/app/templates/main/contact-giver.html
@@ -5,10 +5,10 @@
 {% block category %}{% endblock %}
 
 {% block page_content %}
-<div >
+<div class="contact-giver-div">
 
    <h1>Hi {{ current_user.username }}! Ask away!</h1> 
-   <h4>This is about {{ item.title }} posted by {{ item.giver.username }}</h4>
+   <h4>This is about <strong>{{ item.title }}</strong> posted by <strong>{{ item.giver.username }}</strong></h4>
 <form method="POST">
     <!-- sending email work in progress -->
     <!-- also creating message page -->
