--- a/app/templates/main/each-item.html
+++ b/app/templates/main/each-item.html
@@ -12,7 +12,7 @@
         <div class="card col-sm-12 each-item">
             <img class="card-img-top item-image2" src="{{url_for('static', filename='images/cart.jpg')}}" alt="">
             <div class="card-body">
-                <h5 class="card-title">By {{ item.giver.username }}</h5>
+                <a href="{{ url_for('main.user', username=item.giver.username)}}"><h5 class="card-title">By {{ item.giver.username }}</h5></a>
                 <p class="card-text">{{ item.description }}</p>
                 <p class="card-text"><small class="text-muted">{{ moment(item.timestamp).fromNow() }}</small></p>
             </div>
