--- a/app/templates/main/profile.html
+++ b/app/templates/main/profile.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}{{super()}} Profile {{user.username}}{% endblock title %}
+{% block title %}{{super()}} Profile of {{ user.username }}{% endblock title %}
 
 {% block navbar %}{{ super() }}{% endblock navbar %}
 
