--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,20 +18,18 @@
 
 <nav class="navbar navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="{{ url_for('main.index')}}">FreeStuff</a>
+      <a class="navbar-brand nav-custom" href="{{ url_for('main.index')}}">FreeStuff</a>
 
 
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <!-- <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"> -->
         <ul class="nav navbar-nav navbar-right">
           
             {% if current_user.is_authenticated %}
+
             
-            <li>
-                <a href="{{ url_for('main.post_new_item') }}"><button type="button" class="btn btn-secondary">Post New Item</button></a>
-            </li>
             <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                    Account <b class="caret"></b>
+                <a href="#" class="dropdown-toggle nav-items" data-toggle="dropdown">
+                    {{current_user.username}} <b class="caret"></b>
                 </a>
                 <ul class="dropdown-menu">
                     <li>
@@ -40,21 +38,17 @@
                         </a>
                     </li>
                     <li><a href="{{ url_for('main.check_messages', username=current_user.username)}}">Messages</a></li>
+                    <li><a href="{{ url_for('auth.logout') }}">Log Out</a></li>
                 </ul>
             </li>
 
-            <li><a href="{{ url_for('auth.logout') }}">Log Out</a></li>
-        
-           
-
-
             {% else %}
-            <li><a href="{{ url_for('auth.register') }}">Create New Account</a></li>
-            <li><a href="{{ url_for('auth.login') }}">Log In</a></li>
+            <li><a class="nav-items" href="{{ url_for('auth.register') }}">Create New Account</a></li>
+            <li><a class="nav-items" href="{{ url_for('auth.login') }}">Log In</a></li>
             {% endif %}
         </ul>
     </div>
-    </div>
+    <!-- </div> -->
   </nav>
 
 {% endblock %}
@@ -65,7 +59,7 @@
 <div class = "content-div">
 <div class="container">
     {% for msg in get_flashed_messages() %}
-        <div class="alert alert-danger">
+        <div class="alert alert-warning">
             <button type="button" class="done" data-dismiss="alert">&times;</button>
             {{ msg }}
         </div>
@@ -76,8 +70,8 @@
 
 <div class="container">
                                     
-    <div class="dropdown">
-      <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Category
+    <div class="dropdown category-div">
+      <button class="btn btn-dark dropdown-toggle button-custom" type="button" data-toggle="dropdown">Category
       <span class="caret"></span></button>
       <ul class="dropdown-menu">
         <li><a href="{{ url_for('main.home_living') }}">Home & Living</a></li>
@@ -94,12 +88,20 @@
       </ul>
     </div>
 
-    <form class="d-flex" method="GET" action="{{ url_for('main.search')}}">
-
-        <input class="form-control me-2" name="query" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
+    
+    <form class="d-flex form-div" method="GET" action="{{ url_for('main.search')}}">
+        <div class="seach-field-div">
+            <input class="form-control me-2" name="query" type="search" placeholder="Search" aria-label="Search">
+        </div>
+        <div class="search_button"><button class="btn btn-light button-custom" type="submit">Search</button></div>
       </form>
-
+    
+    <div class="post-new-item-div">
+      {% if current_user.is_authenticated %}
+      <a href="{{ url_for('main.post_new_item') }}">
+        <button type="button" class="btn btn-dark btn-lg button-custom">Post New Item</button></a>
+        {% endif %}
+    </div>
   </div>
 {% endblock %}
 
