--- a/app/templates/main/per_category.html
+++ b/app/templates/main/per_category.html
@@ -5,7 +5,7 @@
 {% block page_content %}
 <div class="item-div">
 
-  <h1>Category: {{ category }}</h1>
+  <h1 class="category-title">Category: {{ category }}</h1>
   {% if items %}
   {% for item in items|sort(reverse=True, attribute='timestamp') %}
 
