--- a/app/templates/main/each-item.html
+++ b/app/templates/main/each-item.html
@@ -18,7 +18,7 @@
             </div>
         </div>
     </div>
-    {% if current_user.is_authenticated%}
+    {% if current_user.is_authenticated and not current_user==item.giver %}
     <a href="{{ url_for('main.contact_giver', item_id=item.id) }}"><button type="button" class="btn btn-primary">Contact {{ item.giver.username }}</button></a>
     {% endif %}
     {% if current_user == item.giver %} <!-- Want the button to appear for admin as well -->
