--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -31,8 +31,9 @@ a:hover {
 	color:chartreuse;
 }
 
+
 .form-div {
-    width:80%;
+    width:100%;
     margin: auto;
 }
 
@@ -56,6 +57,8 @@ a:hover {
 	border-style:ridge;
 	color: white;
 }
+
+
 
 .button-custom:hover {
 	background-color: white;
@@ -113,7 +116,7 @@ a:hover {
     height:fit-content;
 }
 
-/* home_living.html */
+/* per_category.html */
 .each-item {
     text-align: center;
 }
@@ -152,6 +155,38 @@ a:hover {
     margin-bottom: 2%;
 }
 
+.profile-div {
+	width:80%;
+	margin:auto;
+}
+
+.profile-div2 {
+	text-align: left;
+}
+
+.profile-table {
+	table-layout: fixed; 
+	width: 100%;
+}
+
+.profile-table th {
+	width:16%;
+}
+
+.profile-bio-td {
+	word-wrap: break-word;
+}
+
+.profile-hr {
+	width:80%;
+	margin:auto;
+}
+
+.profile-buttons{
+	margin-top:3%;
+	margin-bottom:3%;
+}
+
 /* post-new-item.html */
 .post-new-item-div h1 {
     margin-bottom: 3%;
@@ -172,7 +207,7 @@ a:hover {
 /* LEFT BUBBLE */
 p.bubble {
 	position: relative;
-	width: fit-content;
+	width: 50%;
 	text-align: center;
 	line-height: 1.4em;
 	margin: 0 auto 5% 0;
@@ -264,4 +299,12 @@ p.speech.right:after {
 	margin-bottom: 3%;
 }
 
+.forms {
+	width:50%;
+	margin:auto;
+}
+
+.form-div p {
+	margin-top: 2%;
+}
 
