--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -6,7 +6,7 @@
 {% block category %}{% endblock %}
 {% block page_content%}
 <div class="form-div">
-<form method="POST">
+<form class='forms' method="POST">
 {{ wtf.quick_form(form) }}
 </form>
 </div>
