--- a/app/templates/mail/user_welcome.html
+++ b/app/templates/mail/user_welcome.html
@@ -3,4 +3,4 @@
 <p>Give away your unnecessary things to someone who need them!</p>
 <p>Save money and the world!</p>
 
-<a href="{{ url_for('main.index')}}">Browse FreeStuff</a>
+<a href="{{ link }}">Browse FreeStuff</a>
