--- a/app/templates/main/per_category.html
+++ b/app/templates/main/per_category.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% import "_macros.html" as macros %}
 
 {% block title %}{{super()}}{{category}} {% endblock %}
 
@@ -25,5 +26,11 @@
 {% endfor %}
 {% endif %}
 </div>
+
+{% if pagination %}
+<div class="pagination">
+  {{ macros.pagination_widget(pagination, '.index') }}
+</div>
+{% endif %}
 
 {% endblock %}
