--- a/app/templates/main/user.html
+++ b/app/templates/main/user.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% import "_macros.html" as macros %}
 
 {% block title %}{{super()}} Profile {{user.username}}{% endblock title %}
 
@@ -8,50 +9,62 @@
 {% block category %}{% endblock %}
 {% block page_content %}
 
-<div class="page-header">
-  <div class="profile-header">
+<!-- <div class="page-header"> -->
+  <div class="profile-header profile-div">
 
     <h1>{{ user.username }}</h1>
-    <table class="table">
-      <tbody>
-        <tr>
-          <th scope="row">Name</th>
-          <td>{% if user.name %}{{ user.name }}{% endif %}</td>
-        </tr>
-        <tr>
-          <th scope="row">Location</th>
-          <td>{% if user.location %}{{ user.location }}{% endif %}</td>
-        </tr>
-        {% if current_user.is_administrator() %}
-        <tr>
-          <th scope="row">Email</th>
-          <td><a href="mailto:{{ user.email }}">{{ user.email }}</a></td>
-        </tr>
-        {% endif %}
-        <tr>
-          <th scope="row">Bio</th>
-          <td>{% if user.bio %}{{ user.bio }}{% endif %}</td>
-        </tr>
-        <tr>
-          <th scope="row">Last seen</th>
-          <td>{{ moment(user.last_seen).fromNow() }}</td>
-        </tr>
-      </tbody>
-    </table>
-
+    <div class="profile-div2">
+      <table class="table profile-table">
+        <tbody>
+          <tr>
+            <th scope="row">Name</th>
+            <td>{% if user.name %}{{ user.name }}{% endif %}</td>
+          </tr>
+          <tr>
+            <th scope="row">Location</th>
+            <td>{% if user.location %}{{ user.location }}{% endif %}</td>
+          </tr>
+          {% if current_user.is_administrator() %}
+          <tr>
+            <th scope="row">Email</th>
+            <td><a href="mailto:{{ user.email }}">{{ user.email }}</a></td>
+          </tr>
+          {% endif %}
+          <tr>
+            <th scope="row">Bio</th>
+            <td class="profile-bio-td">{% if user.bio %}{{ user.bio }}{% endif %}</td>
+          </tr>
+          <tr>
+            <th scope="row">Last seen</th>
+            <td>{{ moment(user.last_seen).fromNow() }}</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
-</div>
-  {% if user == current_user %}
-  <a class="btn btn-default" href="{{ url_for('.edit_profile') }}">Edit Profile</a>
-  {% endif %}
-  {% if user == current_user and user.is_administrator() %}
-  <a class="btn btn-danger" href="{{ url_for('.admin_edit_profile', id=user.id) }}">Edit as Admin</a>
-  {% endif %}
+  <hr class="profile-hr">
+<!-- </div> -->
 
-<div class = 'user-item-list'>
-<h4>FreeStuff by {{ user.username }}</h4>
-{% include '_posts.html' %}
+<div class="profile-buttons">
+{% if user == current_user %}
+<a class="btn btn-default" href="{{ url_for('.edit_profile') }}">Edit Profile</a>
+{% endif %}
+{% if user == current_user and user.is_administrator() %}
+<a class="btn btn-danger" href="{{ url_for('.admin_edit_profile', id=user.id) }}">Edit as Admin</a>
+{% endif %}
 </div>
+
+<div class='user-item-list'>
+  <h4>FreeStuff by {{ user.username }}</h4>
+  {% include '_posts.html' %}
+</div>
+
+{% if pagination %}
+<div class="pagination">
+  {{ macros.pagination_widget(pagination, '.index') }}
+</div>
+{% endif %}
+
 
 
 
