--- a/app/templates/main/search.html
+++ b/app/templates/main/search.html
@@ -1,34 +1,34 @@
+
+
 {% extends 'base.html' %}
 {% import "_macros.html" as macros %}
 
-{% block title %}{{super()}}Search result{% endblock %}
+{% block title %}{{super()}}Search result for {{keyword}}{% endblock %}
 
 {% block page_content %}
 
-{% if results %}
-<div class="index-div">
-<h3>The search result related to "<strong>{{ keyword }}</strong>".</h3>
-{% for result in results %}
 
-<div class="card-deck">
+<div class="item-div">
+  <h3 class="category-title">Search keyword "<strong>{{ keyword }}</strong>". </h3>
+  {% if results %}
+  {% for result in results|sort(reverse=True, attribute='timestamp') %}
 
+  <div class="card-deck">
     <div class="card col-lg-3 col-md-4 each-item">
-        <a href="{{ url_for('main.each_item', item_id=result.id)}}">
-            <img class="card-img-top item-image" src="{{url_for('static', filename='images/cart.jpg')}}" alt="{{ result.title }}">
-
-            <div class="card-body">
-                <h5 class="card-title">{{ result.title }}</h5>
-        </a>
-
-        <p class="card-text"><small class="text-muted">{{ moment(result.timestamp).fromNow() }}</small></p>
+      <a href="{{ url_for('main.search', item_id=result.id)}}">
+        <img class="card-img-top item-image" src="{{url_for('static', filename='images/cart.jpg')}}" alt="">
+        <div class="card-body">
+          <h5 class="card-title">{{ result.title }}</h5></a>
+          <p class="card-text"><small class="text-muted">{{ moment(result.timestamp).fromNow() }}</small></p>
+        </div>
     </div>
-</div>
+    {% endfor %}
     {% else %}
-<p>There is no result related to "<strong>{{ keyword }}</strong>".</p>
-{% endfor %}
-{% endif %}
-
-</div>
+    <p>There is no item related to the keyword.</p>
+   
+    {% endif %}
+  </div>
+  
 
 {% if pagination %}
 <div class="pagination">
