working on messages

--- a/app/templates/_posts.html
+++ b/app/templates/_posts.html
@@ -16,9 +16,9 @@
     </div>
 </div>
     
-    {% else %}
-    <h4>There is no item posed yet.</h4>
     {% endfor %}
+    {% else %}
+    <h4>There is no item posted yet.</h4>
     {% endif %}
 
 </div>
