--- a/app/templates/main/each-item.html
+++ b/app/templates/main/each-item.html
@@ -12,40 +12,63 @@
         <div class="card col-sm-12 each-item">
             <img class="card-img-top item-image2" src="{{url_for('static', filename='images/cart.jpg')}}" alt="">
             <div class="card-body">
-                <a href="{{ url_for('main.user', username=item.giver.username)}}"><h5 class="card-title">By {{ item.giver.username }}</h5></a>
+                <a href="{{ url_for('main.user', username=item.giver.username)}}">
+                    <h5 class="card-title">By {{ item.giver.username }}</h5>
+                </a>
                 <p class="card-text">{{ item.description }}</p>
                 <p class="card-text"><small class="text-muted">{{ moment(item.timestamp).fromNow() }}</small></p>
             </div>
         </div>
     </div>
     {% if current_user.is_authenticated and not current_user==item.giver %}
-    <a href="{{ url_for('main.contact_giver', item_id=item.id) }}"><button type="button" class="btn btn-primary button-custom">Contact {{ item.giver.username }}</button></a>
+    <a href="{{ url_for('main.contact_giver', item_id=item.id) }}"><button type="button"
+            class="btn btn-primary button-custom">Contact {{ item.giver.username }}</button></a>
     {% endif %}
-    {% if current_user == item.giver %} <!-- Want the button to appear for admin as well -->
-    <a href="{{ url_for('main.edit_post', item_id=item.id) }}"><button type="button" class="btn btn-warning">Edit Post</button></a>
-    <a href="{{ url_for('main.delete_post', item_id=item.id) }}"><button type="button" class="btn btn-danger">Delete Post</button></a>
+    {% if current_user == item.giver %}
+    <!-- Want the button to appear for admin as well -->
+    <a href="{{ url_for('main.edit_post', item_id=item.id) }}"><button type="button" class="btn btn-warning">Edit
+            Post</button></a>
+    <a href="{{ url_for('main.delete_post', item_id=item.id) }}"><button type="button" class="btn btn-danger">Delete
+            Post</button></a>
     {% endif %}
 </div>
 
 <div class="message-div">
-    
+
     {% if item.messages %}
     {% for message in item.messages|sort(reverse=True, attribute='timestamp')  %}
     {% if message.reply == False %}
-    <p class="asker">from <strong><a href="{{ url_for('main.user', username=message.asker.username)}}">{{ message.asker.username}}</a></strong>{{ moment(message.timestamp).fromNow() }}</p>
-    <p class="bubble speech left">{{ message.description }}  
-        {% if current_user == item.giver %}  
-        <a class="reply-tag" href="{{ url_for('main.reply', item_id=item.id)}}">Reply</a>
-        {% endif %}</p> 
+    <p class="asker">from <strong><a
+                href="{{ url_for('main.user', username=message.asker.username)}}">{{ message.asker.username}}</a></strong>{{ moment(message.timestamp).fromNow() }}
+    </p>
+    <p class="bubble speech left">{{ message.description }}
+        {% if current_user == item.giver%}
+        <a class="reply-tag" href="{{ url_for('main.reply', item_id=item.id, message_id=message.id )}}">Reply</a>{% endif %}
+        {% if message.replied == False and current_user == item.giver %}
+        <a href="{{ url_for('main.mark_as_replied', item_id=item.id, message_id=message.id)}}">
+            <button class="btn btn-light button-custom" type="submit">Mark as Replied</button>
+        </a>
+        
+        {% endif %}</p>
+    <p>{{ message.id }}</p>
     {% endif %}
     {% if message.reply == True %}
-    <p class="giver">from <strong><a href="{{ url_for('main.user', username=item.giver.username)}}">{{ item.giver.username}}</a> </strong>{{ moment(message.timestamp).fromNow() }}</p>
-    <p class="bubble speech right">{{ message.description }}</p>
+    <p class="giver">from <strong><a
+                href="{{ url_for('main.user', username=item.giver.username)}}">{{ item.giver.username}}</a>
+        </strong>{{ moment(message.timestamp).fromNow() }}</p>
+    <p class="bubble speech right">{{ message.description }}
+        {% if message.read == False and message.asker != current_user %}
+        
+        <a href="{{ url_for('main.mark_as_read', item_id=item.id, message_id=message.id)}}">
+            <button class="btn btn-light button-custom" type="submit">Mark as Read</button>
+            {% endif %}
+    </p>
+    <p>{{ message.id }}</p>
     {% endif %}
     {% endfor %}
     {% else %}
     <h4>There is no question so far.</h4>
-    
+
     {% endif %}
 </div>
 
