message correspondence sorted. yay

--- a/app/templates/main/contact-giver.html
+++ b/app/templates/main/contact-giver.html
@@ -7,7 +7,7 @@
 {% block page_content %}
 <div class="contact-giver-div">
 
-   <h1>Hi {{ current_user.username }}! Ask away!</h1> 
+   <h1>Ask away!</h1> 
    <h4>This is about <strong>{{ item.title }}</strong> posted by <strong>{{ item.giver.username }}</strong></h4>
 <form class='forms' method="POST">
     <!-- sending email work in progress -->
