--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -12,9 +12,10 @@
   {% for post in posts|sort(reverse=True, attribute='timestamp') %}
   <div class="card-deck">
     <div class="card col-lg-3 col-md-4 each-item">
-      <a href="{{ url_for('main.each_item', item_id=post.id)}}">
-        <img class="card-img-top item-image" src="{{url_for('static', filename='images/cart.jpg')}}"
+      <a href="{{ url_for('main.each_item', item_id=post.id)}}"> 
+        <img class="card-img-top item-image" src="{{ photos_path }}{{ post.photos }}"
           alt="{{ post.title }}">
+          
         <div class="card-body">
           <h5 class="card-title">{{ post.title }}</h5>
       </a>
