--- a/app/templates/main/edit-post.html
+++ b/app/templates/main/edit-post.html
@@ -8,8 +8,15 @@
 {% block page_content %}
 <h1>Edit Your Post</h1>
 
-<form method="POST">
+<form method="POST" enctype=multipart/form-data>
 {{ wtf.quick_form(form) }}
 </form>
+
+<!-- error is taken care of by bootstrap form -->
+<!-- {% if form.photos.errors %}
+{% for error in form.photos.errors %}
+<span class="'text-danger">{{ error }}</span><br>
+{% endfor %}
+{% endif %} -->
 
 {% endblock %}
