--- a/app/templates/main/per_category.html
+++ b/app/templates/main/per_category.html
@@ -13,7 +13,7 @@
   <div class="card-deck">
     <div class="card col-lg-3 col-md-4 each-item">
       <a href="{{ url_for('main.each_item', item_id=item.id)}}">
-        <img class="card-img-top item-image" src="{{url_for('static', filename='images/cart.jpg')}}" alt="">
+        <img class="card-img-top item-image" src="{{ photos_path }}{{ item.photos }}" alt="{{ item.title }}">
         <div class="card-body">
           <h5 class="card-title">{{ item.title }}</h5></a>
           <p class="card-text"><small class="text-muted">{{ moment(item.timestamp).fromNow() }}</small></p>
