--- a/app/templates/main/search.html
+++ b/app/templates/main/search.html
@@ -16,7 +16,7 @@
   <div class="card-deck">
     <div class="card col-lg-3 col-md-4 each-item">
       <a href="{{ url_for('main.each_item', item_id=result.id) }}">
-        <img class="card-img-top item-image" src="{{url_for('static', filename='images/cart.jpg')}}" alt="">
+        <img class="card-img-top item-image" src="{{ photos_path }}{{ result.photos }}" alt="{{ result.title }}">
         <div class="card-body">
           <h5 class="card-title">{{ result.title }}</h5></a>
           <p class="card-text"><small class="text-muted">{{ moment(result.timestamp).fromNow() }}</small></p>
